[package]
name = "nikki"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI based journaling system"
homepage = "https://github.com/bryceac/nikki"
repository = "https://github.com/bryceac/nikki"
keywords = ["nikki", "journal", "journaling", "commandline", "cli"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
edit = "0.1.5"
shellexpand = "3.1.1"
url_path = "0.1.3"
walkdir = "2.5.0"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """\
A simple CLI based journaling system to \
help chronicle anything you would like."""
section = "unknown"
priority = "optional"
assets = [
    ["target/release/nikki", "usr/local/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nikki", dest = "/usr/local/bin/", mode = "755" },
]